chore: upgrade to Java 17 using Moderne CLI
Migrated from Java 8 to Java 17 using Moderne CLI with the OpenRewrite
recipe org.openrewrite.java.migrate.UpgradeToJava17.

- Updated java.version from 1.8 to 17
- Upgraded Spring Boot from 2.1.4 to 2.6.15 for Java 17 support
- Updated build tool versions (wro4j, jacoco)
- Added jakarta.xml.bind-api for Java 17 compatibility
- Added spring-boot-starter-validation (required in Spring Boot 2.3+)
- Added junit-vintage-engine for JUnit 4 test compatibility
- Removed non-existent hypersistence-optimizer dependency
- Removed explicit Hibernate version (managed by Spring Boot)

Co-authored-by: Ona <no-reply@ona.com>